--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="root"></div>
     <script src="/src/index.tsx" type="module"></script>
   </body>
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate" />
   <!-- Eruda is console for mobile browsers
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script> -->
