--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <div id="root"></div>
   </body>
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate" />
   <!-- Eruda is console for mobile browsers
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script> -->
