--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
-  <!-- Eruda is console for mobile browsers -->
+  
+  
+  <!-- Eruda is console for mobile browsers 
+   change
+   -->
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
+
+
 </html>
