--- a/index.html
+++ b/index.html
@@ -11,4 +11,13 @@
     <div id="root"></div>
     <script src="/src/index.tsx" type="module"></script>
   </body>
+  
+  
+  <!-- Eruda is console for mobile browsers 
+   change
+   -->
+  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
+
+
 </html>
